--- a/main.css
+++ b/main.css
@@ -230,6 +230,17 @@ footer{
   color: gray;
 }
 
+.state_all, .state_done, .state_left {
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+#State .active,
+#State .active span{
+  color: #121481;
+  font-weight: bold;
+}
+
 .main_todo{
   width: 300px;
   height: 400px;
@@ -298,7 +309,7 @@ footer{
 }
 
 #todo-list li{
-  margin-bottom: 22px;
+  margin-bottom: -10px;
   display: flex;
   justify-content: space-between;
   align-items: center; /* 수직 가운데 정렬 */
