--- a/main.css
+++ b/main.css
@@ -19,11 +19,12 @@ img{
   color: white;
   width: 100%;
   height: 70px;
-  background-color: rgb(0, 0, 0, 0.3);
+  background-color: rgb(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   font-family: 'Nanum Gothic', sans-serif;
   font-weight: 500;
+  position: relative;
 }
 
 .header_changeBG{
@@ -31,8 +32,6 @@ img{
   cursor : pointer;
   flex-grow: .5;
 }
-
-
 
 .header_changeBG:active{
   transform: scale(.91);
@@ -42,8 +41,22 @@ img{
   flex-grow: 8;
 }
 
-.header_weather{
-  flex-grow: .7;
+.header_weather {
+  position: relative; 
+  z-index: 1; 
+  flex-grow: 0.7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#condition {
+  display: none;
+}
+
+.weather_icon {
+  width: 50px;
+  height: 50px;
 }
 
 .header_todo{
@@ -343,4 +356,13 @@ footer{
 
 .hide{
   display: none;
+}
+
+@media screen and (max-width:767px) {
+  .header_weather #condition {
+    display: block;
+  }
+  .header_weather #icon {
+    display: none;
+  }
 }
